--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -17,5 +17,5 @@ jobs:
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git remote add mirror https://x-access-token:${{ secrets.MIRROR_TOKEN }}@github.com/NEW_USERNAME/NEW_REPO.git
+          git remote add mirror https://x-access-token:${{ secrets.MIRROR_TOKEN }}@github.com/gmc-mbnr/T2P.git
           git push mirror main --force
