--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -6,35 +6,34 @@ on:
       - main
 
 permissions:
-  contents: write
+  contents: write    # GITHUB_TOKEN can read & write this repo
 
 jobs:
   mirror:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout full history with PAT
+      - name: Checkout source with GITHUB_TOKEN
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.MIRROR_TOKEN }}
+          # ⇐— NO token: field here, so it uses GITHUB_TOKEN by default
 
       - name: Make orphan branch without workflows
         run: |
-         git config --global user.name "GitHub Action"
-         git config --global user.email "action@github.com"
-         git checkout --orphan mirror-branch
-         git rm -rf --cached .
-         git reset --hard
-         git checkout main -- .
-         rm -rf .github
-         git clean -fdx
-         git add .
-         git commit -m "Mirror without workflows" --allow-empty
+          git config --global user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git checkout --orphan mirror-branch
+          git rm -rf --cached .
+          git reset --hard
+          git checkout main -- .
+          rm -rf .github
+          git clean -fdx
+          git add .
+          git commit -m "Mirror without workflows" --allow-empty
 
-      - name: Push clean branch
+      - name: Push clean branch with mirror PAT
         run: |
-          git tag mirror-$(date +%s)
-          git remote add mirror https://x-access-token:${{ secrets.MIRROR_TOKEN }}@github.com/gmc-mbnr/T2P.git
+          git remote add mirror \
+            https://x-access-token:${{ secrets.MIRROR_TOKEN }}@github.com/gmc-mbnr/T2P.git
           git push mirror HEAD:main --force
-
